# stock-forecasting

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/plans/: hybrid_ai_investment_radar_53702e0c.plan.md
config/: default.yaml  ensemble.yaml  features.yaml  forecast.yaml  jobs.yaml  macro.yaml  memory.yaml  nlp.yaml  rl.yaml  walkforward.yaml
dashboard/: README.md  nuxt.config.ts  package.json
dashboard/app/composables/: useRadarApi.ts
dashboard/app/pages/: index.vue
dashboard/app/types/: radar.ts
dashboard/app/utils/: chartResample.ts  format.ts  sidebar.ts  signalLabels.ts
dashboard/scripts/: dev.sh
dashboard/server/utils/: repo-root.ts
scripts/: check_interval_forecast_consistency.py  ensure-api.sh  env.sh  evaluate_chart_quality.py  evaluate_pure_ai.py  restart-api.sh  start-api.sh  stop-api.sh  weekly_retrain.sh
src/radar/: __init__.py
src/radar/api/: chart_series.py  chart_validation.py  server.py  service.py
src/radar/backtest/: __init__.py  expectancy.py  (+3 more)
tests/: test_ai_return.py  test_alphavantage_env.py  test_alphavantage_forecast.py  test_api_cache.py  test_bar_alignment.py  test_base_models.py  test_chart_display_path.py  test_chart_model_path.py  test_chart_validation.py  test_ensemble.py  test_expectancy.py  test_feature_leakage.py  test_forecast.py  test_forecast_quality.py  test_gates_from_row.py  test_incremental_storage.py  test_interval_consistency.py  test_intraday_event_features.py  test_intraday_forecast.py  test_intraday_lgbm_open.py  test_intraday_news_recency.py  test_intraday_open_forecast.py  test_intraday_sanitize.py  test_labels_shift.py  test_live_news.py  test_live_scorer.py  test_macro_events.py  test_market_hours.py  test_memory.py  test_nlp.py  test_prediction_system.py  test_pure_ai_evaluation.py  test_rl_env.py  test_walk_forward_no_shuffle.py
(+114 files in other folders)
